--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,12 +1,12 @@
 name: npm-publish
 
 on:
-  pull_request:
-    branches:
-      - master
+  push:
+    tags:
+      - v*.*.*
 
 jobs:
-  test:
+  publish:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout repository
@@ -15,12 +15,9 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: '12'
-    - name: Publish if version has been updated
-      uses: pascalgn/npm-publish-action@4f4bf159e299f65d21cd1cbd96fc5d53228036df
-      with:
-        tag_name: "v%s"
-        tag_message: "v%s"
-        commit_pattern: "^Release (\\S+)"
+        registry-url: 'https://registry.npmjs.org'
+    - run: yarn
+    - run: yarn publish
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
+        NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
