--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -17,6 +17,7 @@ jobs:
         node-version: '12'
         registry-url: 'https://registry.npmjs.org'
     - run: yarn
+    - run: yarn build
     - run: npm publish
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
