--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "resolveJsonModule": true,
     "outDir": "dist",
     "sourceMap": true,
+    "skipLibCheck": true,
     "declaration": true,
     "declarationMap": true,
     "pretty": true,
